src/test/ui/feature-gates/feature-gate-dropck-ugeh.stderr
error[E0658]: unsafe_destructor_blind_to_params has been replaced by may_dangle and will be removed in the future
  --> $DIR/feature-gate-dropck-ugeh.rs:16:5
   |
LL |     #[unsafe_destructor_blind_to_params] // This is the UGEH attribute
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/28498
   = help: add #![feature(dropck_parametricity)] to the crate attributes to enable

warning: use of deprecated attribute `dropck_parametricity`: unsafe_destructor_blind_to_params has been replaced by may_dangle and will be removed in the future. See https://github.com/rust-lang/rust/issues/34761
  --> $DIR/feature-gate-dropck-ugeh.rs:16:5
   |
LL |     #[unsafe_destructor_blind_to_params] // This is the UGEH attribute
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: replace this attribute with `#[may_dangle]`
   |
   = note: #[warn(deprecated)] on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
